completed problem 3
